--- a/src/Services/Templates.API/appsettings.json
+++ b/src/Services/Templates.API/appsettings.json
@@ -96,5 +96,15 @@
   "USER_DEFAULT": {
     "UserName": "admin",
     "PassWord": "JQJDQkj9uPyBClzBkEJhmA=="
+  },
+  "Shopee": {
+    "Keyword1": "ma-giam-gia",
+    "Keyword2": "ShopeePay",
+    "MerchantName": "shopee",
+    "HasFilterByKey": "true"
+  },
+  "DATE": {
+    "FORMAT_DATETIME": "dd/MM/yyyy HH:mm:ss",
+    "FORMAT_DATE": "dd/MM/yyyy"
   }
 }
